RESOLVED FIXED45221
Adding support to pass multitouch events from Android browser to webkit
https://bugs.webkit.org/show_bug.cgi?id=45221
Summary Adding support to pass multitouch events from Android browser to webkit
Harry Wu
Reported 2010-09-03 18:20:46 PDT
Now that multitouch zoom is being supported by the android browser, it would be nice to be able to access multitouch events from javascript. When multiple touch points are interacting with the display then ontouchstart, ontouchmove, and ontouchend should be fired appropriately and the 'touches' property of the event (an array) should contain one item for each touch point.
Attachments
The patch for supporting multi-touch in Android (20.58 KB, patch)
2010-09-23 22:09 PDT, Harry Wu
no flags
Almost same patch but removed the style errors in Changlogs (20.64 KB, patch)
2010-09-23 23:29 PDT, Harry Wu
no flags
Updated patch per Steve's comments (21.04 KB, patch)
2010-09-24 15:07 PDT, Harry Wu
steveblock: review+
Updated the tests' JS description. (21.02 KB, patch)
2010-09-27 10:45 PDT, Harry Wu
steveblock: review-
Updated the expected result files. (21.31 KB, patch)
2010-09-27 15:24 PDT, Harry Wu
no flags
Harry Wu
Comment 1 2010-09-23 22:09:58 PDT
Created attachment 68646 [details] The patch for supporting multi-touch in Android
WebKit Review Bot
Comment 2 2010-09-23 22:12:57 PDT
Attachment 68646 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 9 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Harry Wu
Comment 3 2010-09-23 23:29:12 PDT
Created attachment 68654 [details] Almost same patch but removed the style errors in Changlogs
Steve Block
Comment 4 2010-09-24 03:57:13 PDT
Comment on attachment 68654 [details] Almost same patch but removed the style errors in Changlogs View in context: https://bugs.webkit.org/attachment.cgi?id=68654&action=review > LayoutTests/ChangeLog:6 > + https://bugs.webkit.org/show_bug.cgi?id=45221 Blank line after bug URL > LayoutTests/ChangeLog:9 > + Current Android system can provide this to browser, hence these tests are 'can not provide' > LayoutTests/ChangeLog:13 > + * fast/events/touch/script-tests/basic-multi-touch-events-android.js: Added. It seems like these tests aren't specific to Android - they just avoid the situation where one touch point is released while another is maintained. If you expect them to pass on all platform, you should probably rename them to remove 'Android' and make clear the difference from the existing tests. If not, you should add them to the Skipped lists for all other platforms that enable touch events.
Harry Wu
Comment 5 2010-09-24 15:07:22 PDT
Created attachment 68764 [details] Updated patch per Steve's comments
Steve Block
Comment 6 2010-09-27 05:03:12 PDT
Comment on attachment 68764 [details] Updated patch per Steve's comments View in context: https://bugs.webkit.org/attachment.cgi?id=68764&action=review Are you a committer? If not, and you'd like a patch to be committed on your behalf, be sure to set the cq? flag. > LayoutTests/fast/events/touch/basic-multi-touch-events-limited.html:9 > + where one touch point is released while another is maintained. It looks like you've edited this from the output of WebKitTools/Scripts/make-script-test-wrappers? You shouldn't do this. Tests that use the 'script-tests + TEMPLATE.html' approach should be written entirely in the JS file. This sentence could be part of the description() text.
Harry Wu
Comment 7 2010-09-27 10:45:24 PDT
Created attachment 68931 [details] Updated the tests' JS description.
Steve Block
Comment 8 2010-09-27 10:47:00 PDT
Comment on attachment 68931 [details] Updated the tests' JS description. View in context: https://bugs.webkit.org/attachment.cgi?id=68931&action=review > LayoutTests/fast/events/touch/basic-multi-touch-events-limited-expected.txt:1 > +This tests basic multi touch event support. Looks like you need to update the expected results.
Harry Wu
Comment 9 2010-09-27 15:24:56 PDT
Created attachment 68972 [details] Updated the expected result files.
Steve Block
Comment 10 2010-09-28 02:08:12 PDT
r=me
WebKit Commit Bot
Comment 11 2010-09-28 02:26:44 PDT
Comment on attachment 68972 [details] Updated the expected result files. Clearing flags on attachment: 68972 Committed r68499: <http://trac.webkit.org/changeset/68499>
WebKit Commit Bot
Comment 12 2010-09-28 02:26:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.