2010-09-28  Huahui Wu  <mediadependent@gmail.com>

Reviewed by Steve Block.

        Add two multi-touch tests for Android.
        https://bugs.webkit.org/show_bug.cgi?id=45221

        The original tests (touch-target.html and basic-multi-touch-events.html)
        requires the system being able to release one point while maintain another point.
        Current Android system can not provide this to browser, hence these tests are
        slightly modified for Android. Since these are limited version of the original ones,
        other platforms should pass these tests if they can pass the original ones.

        * fast/events/touch/basic-multi-touch-events-limited-expected.txt: Added.
        * fast/events/touch/basic-multi-touch-events-limited.html: Added.
        * fast/events/touch/script-tests/basic-multi-touch-events-limited.js: Added.
        (touchEventCallback):
        (verifyTouchEvent):
        (verifyTouchPoint):
        (verifyTouch):
        (multiTouchSequence):
        * fast/events/touch/script-tests/touch-target-limited.js: Added.
        (touchStartHandler):
        (touchMoveHandler):
        * fast/events/touch/touch-target-limited-expected.txt: Added.
        * fast/events/touch/touch-target-limited.html: Added.
2010-09-28  Huahui Wu  <mediadependent@gmail.com>

        Reviewed by Steve Block.

        Add multi-touch for Android.
        https://bugs.webkit.org/show_bug.cgi?id=45221

        The Android touch event used to take one point as the touch point,
        it's now changed to a vector of points to support multi-touch.

        Tests: fast/events/touch/basic-multi-touch-events-limited.html
               fast/events/touch/touch-target-limited.html

        * platform/PlatformTouchEvent.h:
        * platform/PlatformTouchPoint.h:
        * platform/android/PlatformTouchEventAndroid.cpp:
        (WebCore::PlatformTouchEvent::PlatformTouchEvent):
        * platform/android/PlatformTouchPointAndroid.cpp:
        (WebCore::PlatformTouchPoint::PlatformTouchPoint):

Canonical link: https://commits.webkit.org/59186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68499 268f45cc-cd09-0410-ab3c-d52691b4dbfc