WebCore/platform/PlatformTouchPoint.h
@@ -47,7 +47,7 @@ public:
     PlatformTouchPoint(const QTouchEvent::TouchPoint&);
     PlatformTouchPoint() {};
 #elif PLATFORM(ANDROID)
-    PlatformTouchPoint(const IntPoint& windowPos, State);
+    PlatformTouchPoint(unsigned id, const IntPoint& windowPos, State);
 #elif PLATFORM(BREWMP)
     PlatformTouchPoint(int id, const IntPoint& windowPos, State);
 #endif
