WebCore/platform/android/PlatformTouchEventAndroid.cpp
@@ -37,11 +37,13 @@ enum AndroidMetaKeyState {
     META_SYM_ON = 0x04
 };
 
-PlatformTouchEvent::PlatformTouchEvent(const IntPoint& windowPos, TouchEventType type, PlatformTouchPoint::State state, int metaState)
+PlatformTouchEvent::PlatformTouchEvent(const Vector<IntPoint>& windowPoints, TouchEventType type, PlatformTouchPoint::State state, int metaState)
     : m_type(type)
     , m_metaKey(false)
 {
-    m_touchPoints.append(PlatformTouchPoint(windowPos, state));
+    m_touchPoints.reserveCapacity(windowPoints.size());
+    for (unsigned c = 0; c < windowPoints.size(); c++)
+        m_touchPoints.append(PlatformTouchPoint(windowPos, state));
 
     m_altKey = metaState & META_ALT_ON;
     m_shiftKey = metaState & META_SHIFT_ON;
