WebCore/platform/android/PlatformTouchPointAndroid.cpp
@@ -30,8 +30,8 @@
 
 namespace WebCore {
 
-PlatformTouchPoint::PlatformTouchPoint(const IntPoint& windowPos, State state)
-    : m_id(0)
+PlatformTouchPoint::PlatformTouchPoint(unsigned id, const IntPoint& windowPos, State state)
+    : m_id(id)
     , m_state(state)
     , m_screenPos(windowPos)
     , m_pos(windowPos) { }
